samples/_failures_safe/1761532104_ab2c3f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb7bbef0.c: In function ‘parser_advance’:
./samples/SAFE/__tmp_bb7bbef0.c:148:5: error: expected declaration or statement at end of input
  148 |     parser->current_token = lexer_next_token(parser->lexer);
      |     ^~~~~~
